modified the operaters using condition

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       </div>
       <div class="buttons">
         <button onclick="clr()" class="clear">C</button>
-        <button onclick="numb('/')" id="operator">/</button>
-        <button onclick="numb('*')" id="operator">*</button>
-        <button onclick="numb('-')" id="operator">-</button>
+        <button onclick="divide('/')" id="divide">/</button>
+        <button onclick="multiply('*')" id="multiply">*</button>
+        <button onclick="minus('-')" id="minus">-</button>
 
         <button onclick="numb('7')" id="number">7</button>
         <button onclick="numb('8')" id="number">8</button>
         <button onclick="numb('9')" id="number">9</button>
-        <button onclick="numb('+')" id="operator">+</button>
+        <button onclick="plus('+')" id="plus">+</button>
 
         <button onclick="numb('4')" id="number">4</button>
         <button onclick="numb('5')" id="number">5</button>
