--- a/index.html
+++ b/index.html
@@ -3,36 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enhanced Calculator UI</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Calculator</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
   </head>
+
   <body>
     <div class="calculator">
-      <div class="display">
-        <input type="text" id="display" placeholder="0" disabled />
-      </div>
-      <div class="buttons">
-        <button onclick="clr()" class="clear">C</button>
-        <button onclick="divide('/')" id="divide">/</button>
-        <button onclick="multiply('*')" id="multiply">*</button>
-        <button onclick="minus('-')" id="minus">-</button>
-
-        <button onclick="numb('7')" id="number">7</button>
-        <button onclick="numb('8')" id="number">8</button>
-        <button onclick="numb('9')" id="number">9</button>
-        <button onclick="plus('+')" id="plus">+</button>
-
-        <button onclick="numb('4')" id="number">4</button>
-        <button onclick="numb('5')" id="number">5</button>
-        <button onclick="numb('6')" id="number">6</button>
-        <button onclick="cal()" id="equals">=</button>
-
-        <button onclick="numb('1')" id="number">1</button>
-        <button onclick="numb('2')" id="number">2</button>
-        <button onclick="numb('3')" id="number">3</button>
-
-        <button onclick="numb('0')" id="number">0</button>
-        <button onclick="numb('.')" style="width: 450%">.</button>
+      <h1>Calculator</h1>
+      <input type="text" id="display" value="" placeholder="0" disabled />
+      <div class="calculator-keys">
+        <button id="clear" onclick="displayclear()">AC</button>
+        <button onclick="displayoperator('%')">%</button>
+        <button onclick="displayoperator('/')">&div;</button>
+        <button onclick="display('7')">7</button>
+        <button onclick="display('8')">8</button>
+        <button onclick="display('9')">9</button>
+        <button onclick="displayoperator('*')">&times;</button>
+        <button onclick="display('4')">4</button>
+        <button onclick="display('5')">5</button>
+        <button onclick="display('6')">6</button>
+        <button onclick="displayoperator('-')">-</button>
+        <button onclick="display('1')">1</button>
+        <button onclick="display('2')">2</button>
+        <button onclick="display('3')">3</button>
+        <button onclick="displayoperator('+')">+</button>
+        <button onclick="display('.')">.</button>
+        <button onclick="display('0')">0</button>
+        <button onclick="del()"><i class="fa-solid fa-delete-left"></i></button>
+        <button class="equal-sign" onclick="calculate()">=</button>
       </div>
     </div>
     <script src="app.js"></script>
